# tasks

./: .gitignore  AGENTS.md  ASCII_GLOW_EFFECTS_REFERENCE.md  Makefile  README.md  ansi-color-reference.md  ascii-block-letter-reference.md  ascii-typography-reference.md  backlog.py  install.sh  package-lock.json  package.json  pyproject.toml  tasks.py  tmp.go-improvements.md
.backlog/: .context.yaml  .sessions.yaml  index.yaml
backlog/: __init__.py  __main__.py  autocommit.py  cli.py  critical_path.py  data_dir.py  helpers.py  loader.py  logo.py  models.py  status.py  test_agents_command.py  test_check_command.py  test_cli.py  test_command_features.py  test_critical_path.py  test_dependency_resolution.py  test_loader.py  test_path_query.py  test_priority_selection.py  test_schema_command.py  test_sibling_tasks.py  test_skills_command.py  test_workflow_reports.py  time_utils.py
backlog_go/: .gitignore  .pre-commit-config.yaml  CI_GATING.md  COMMAND_PARITY_MATRIX.md  INSTALL.md  MIGRATION_HANDOFF.md  Makefile  PARITY_ACCEPTANCE_CHECKLIST.md  POST_IMPLEMENTATION_REVIEW.md  README.md  RELEASE_CHECKLIST.md  TEXT_OUTPUT_STYLE_CONTRACT.md  VERSIONING.md  go.mod  main.go  main_test.go  precommit_test.go
backlog_ts/: PARITY_DIFFS.md  README.md  check-ts-show.ts  package.json
bl_skills/: sync_backlog_howto.py
docs/: README.md  astro.config.mjs  package.json
docs-design-concepts/: filing-cabinet-visions.md  font-research-extended.md  font-selection.md  level-one-synthesis.md  review-round-1.md  review-round-2-notes.md  shared-prompt.md
scripts/: compile-go.sh  (+1 more)
(+3964 files in other folders)
