[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backlog-cli"
version = "0.1.0"
description = "CLI for hierarchical project backlogs stored in .backlog/"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "PyYAML>=6.0",
  "rich>=13.0",
  "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
backlog = "backlog.cli:cli"
bl = "backlog.cli:cli"
tasks = "backlog.cli:cli"

[tool.setuptools.packages.find]
include = ["backlog*"]
